--- a/style.css
+++ b/style.css
@@ -199,8 +199,17 @@ h2 {
     min-height: 200px;
     border: none;
     border-radius: 7px;
-    padding: 2.5rem;
+    padding: 2.5rem 2.5rem 2rem;
     box-shadow: 4px 4px 10px rgb(154, 198, 206);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.bottom-card{
+    align-self: flex-end;
+    display: flex;
+    gap: 20px;
 }
 
 .card-text{
